fixed some gaps issues and redirect

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -245,8 +245,8 @@
 
 @media (max-width: 768px) {
     .game-container .meal-container {
-        row-gap: 4rem;
-        column-gap: 1rem;
+        row-gap: 3rem;
+        column-gap: 6px;
     }
     .game-container .context-token-container, .game-container .ingredient-container {
         height: 190px;
